// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`emtpy 1`] = `"<hs-accordion class=\\"hydrated\\"><div class=\\"hs-card hs-card--accordion\\"></div></hs-accordion>"`;

exports[`two headers and two panes 1`] = `
"<hs-accordion class=\\"hydrated\\"><div class=\\"hs-card hs-card--accordion\\"><hs-accordion-pane header=\\"Click me\\" class=\\"hydrated\\"><button role=\\"heading\\" aria-expanded=\\"false\\" class=\\"hs-card__control\\">Click me</button><section aria-hidden=\\"\\" class=\\"hs-card__item hs-card__item--pane\\">
        This is an accordion
      </section></hs-accordion-pane></div></hs-accordion>"
`;

exports[`two headers and two panes 2`] = `
"<hs-accordion class=\\"hydrated\\"><div class=\\"hs-card hs-card--accordion\\"><hs-accordion-pane open=\\"\\" header=\\"Click me\\" class=\\"hydrated\\"><button role=\\"heading\\" aria-expanded=\\"true\\" class=\\"hs-card__control hs-card__control--active\\">Click me</button><section class=\\"hs-card__item hs-card__item--pane\\">
        This is an accordion
      </section></hs-accordion-pane></div></hs-accordion>"
`;
